fix line wrapping

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -466,11 +466,6 @@ body > img:last-of-type{
 	display: none;
 }
 
-pre {
-	border: none;
-	margin-bottom: 10px;
-}
-
 .serveronly {
 	color: #4e9eb3;
 }
