--- a/src/styles/prism/_theme.scss
+++ b/src/styles/prism/_theme.scss
@@ -18,6 +18,7 @@
   margin: 0.5em 0;
   color: #ffffff;
   background-color: #2B2B2B;
+  white-space: pre-wrap !important;
 }
 
 pre[class*="language-"],
